Docs: jansmakr 계정 확인 가이드 추가

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,5 +3,13 @@
   "name": "carejoa-webapp",
   "compatibility_date": "2025-10-03",
   "pages_build_output_dir": "./dist",
-  "compatibility_flags": ["nodejs_compat"]
+  "compatibility_flags": ["nodejs_compat"],
+  
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_name": "carejoa-webapp-db",
+      "database_id": "acae82af-3eb2-454a-ae79-1c495bdf42a5"
+    }
+  ]
 }
