--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build:css && vite build",
+    "build": "npm run build:css && npm run sitemap && vite build",
     "build:css": "tailwindcss -i ./src/styles.css -o ./public/static/tailwind.css --minify",
+    "sitemap": "node scripts/generate-sitemap.cjs",
     "preview": "wrangler pages dev",
     "deploy": "npm run build && wrangler pages deploy dist --project-name=carejoa-webapp",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
@@ -22,6 +23,7 @@
     "@hono/vite-build": "^1.2.0",
     "@hono/vite-dev-server": "^0.18.2",
     "autoprefixer": "^10.4.21",
+    "better-sqlite3": "^12.5.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "vite": "^6.3.5",
