Fix: Add sitemap files to static routes
- Add scripts/fix-routes.cjs to exclude sitemap files from Worker
- Update build process to run fix-routes after vite build
- Sitemap files now served as static files
- _routes.json excludes: /sitemap*.xml

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run build:css && npm run sitemap && vite build",
+    "build": "npm run build:css && npm run sitemap && vite build && node scripts/fix-routes.cjs",
     "build:css": "tailwindcss -i ./src/styles.css -o ./public/static/tailwind.css --minify",
     "sitemap": "node scripts/generate-sitemap.cjs",
     "preview": "wrangler pages dev",
